Optimized looping for part 2. Implemented assert statements to verify the changes.